--- a/html/css/parts/_media.scss
+++ b/html/css/parts/_media.scss
@@ -99,12 +99,29 @@
         }
     }
 
+    .assistance {
+        .main_container {
+            overflow: hidden;
+
+            .assistance_in {
+                margin-bottom: 45px;
+                overflow: visible;
+            }
+
+            .assistance_slider_pagination {
+                display: flex;
+                margin-bottom: 60px;
+            }
+        }
+    }
+
     .accident {
         .main_container {
             overflow: hidden;
 
             .accident_in {
                 overflow: visible;
+
 
                 .accident_card {
                     padding: 10px 10px 10px 74px;
@@ -148,6 +165,70 @@
 
                 .swiper-pagination-bullet-active {
                     background: #1D5DEB;
+                }
+            }
+        }
+    }
+
+    .help {
+        padding: 52px 0;
+
+        .main_container {
+            h2 {
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: normal;
+                margin-bottom: 4px;
+            }
+
+
+            p {
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 18px;
+                padding-bottom: 14px;
+            }
+
+            .bg_number {
+                font-size: 80px;
+                font-style: normal;
+                font-weight: 900;
+                line-height: 20.049px;
+                text-transform: uppercase;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+
+            .help_in {
+                flex-direction: column;
+                gap: 10px;
+
+                .help_card {
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    position: relative;
+                    z-index: 2;
+                    gap: 10px;
+                    height: auto;
+                    padding: 10px;
+
+                    img {
+                        margin: 0;
+                        width: 40px;
+                        height: 40px;
+                        object-fit: cover;
+                    }
+
+                    p {
+                        padding: 0;
+                        font-size: 12px;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 18px;
+                    }
                 }
             }
         }
